# emulator-8080

./: .gitignore  CMakeLists.txt  Makefile  README.md
roms/: invaders.asm  sort.asm  test.rom
src/: cpu.c  cpu.h  definitions.c  definitions.h  disassembler.c  display.c  display.h  emulator.c  machine.c  machine.h  old_emulator.c
